# codex-spp

./: .gitignore  AGENTS.md  Cargo.toml  README.md  requirement.md  template_spp.codex.config.toml  template_spp.config.toml
.agents/: attribution.md  policy.md
.agents/modes/: drive.md  normal.md
.agents/schemas/: template_spp.session.schema.json  template_spp.transcript_event.schema.json  template_spp.weekly_report.schema.json
.agents/skills/spp-coach/: SKILL.md
.agents/skills/spp-drive/: SKILL.md
.agents/skills/spp-stats/: SKILL.md
crates/spp/: Cargo.toml
crates/spp/src/: main.rs
docs/: install.md  philosophy.md  usage.md
