[package]
name = "spp"
version = "0.1.0"
edition = "2021"
description = "Codex-spp wrapper CLI"
license = "MIT"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2"
toml = "0.8"
walkdir = "2"
